Fixed implementation from JDK 1.5 to new feature from 1.7 which allows to inherit input stream recieved by JVM for process executed by Runtime environment. This allows to properly read terminal configuration even in case when there is no /dev/tty created. This fix allow to get information from Windows linux terminal emulators like Cygwin.